# email2qa

./: .env.example  .gitignore  README.md  pyproject.toml
src/email2qa/: __init__.py  checkpoint.py  config.py  exchange_client.py  llm_client.py  main.py  output.py  pipeline.py  preprocess.py  prompts.py  quality.py  schema.py
tests/: test_checkpoint.py  test_dotenv.py  test_main.py  test_preprocess.py  test_quality.py  test_schema.py
